--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -1,9 +1,11 @@
 {% include 'recipes/partials/head.html' %}
-
-<body>
-  <head class="main-header-container">
-    <div class="main-header container">
-      <h1><a href="/"><span>Recipes {{ name }}</span></a></h1>
-    </div>
-  </head>
-</body>
+<header class="main-header-container">
+  <div class="main-header container">
+    <h1>
+      <a class="main-logo" href="/">
+        <i class="fas fa-utensils main-logo-icon"></i>
+        <span class="main-logo-text">Recipes</span>
+      </a>
+    </h1>
+  </div>
+</header>
