--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -1,11 +1,11 @@
+{% comment %} Head componnent HTML{% endcomment %}
 {% include 'recipes/partials/head.html' %}
-<header class="main-header-container">
-  <div class="main-header container">
-    <h1>
-      <a class="main-logo" href="/">
-        <i class="fas fa-utensils main-logo-icon"></i>
-        <span class="main-logo-text">Recipes</span>
-      </a>
-    </h1>
-  </div>
-</header>
+
+<body>
+  {% comment %} Header componnent HTML{% endcomment %}
+  {% include 'recipes/partials/header.html' %}
+
+  {% comment %} Search componnent HTML {% endcomment %}
+  {% include 'recipes/partials/search.html' %}
+
+</body>
