--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -8,4 +8,14 @@
   {% comment %} Search componnent HTML {% endcomment %}
   {% include 'recipes/partials/search.html' %}
 
+  <main class="main-content-container">
+    <div class="main-content main-content-list container">
+      <div class="recipe recipe-list-item">
+        <div class="recipe-cover">
+          <img src="https://images.pexels.com/photos/376464/pexels-photo-376464.jpeg" alt="">
+        </div>
+      </div>
+    </div>
+  </main>
+
 </body>
