Update Css Div itens

--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -14,6 +14,37 @@
         <div class="recipe-cover">
           <img src="https://images.pexels.com/photos/376464/pexels-photo-376464.jpeg" alt="">
         </div>
+
+        <div class="recipe-title-container">
+          <h2 class="recipe-title">Lorem ipsum dolor </h2>
+        </div>
+
+        <div class="recipe-author">
+
+          <span class="recipe-author-item">
+            <i class="fas fa-user"></i>
+            Benicio
+          </span>
+
+          <span class="recipe-author-item">
+            <i class="fas fa-calendar-alt"></i>
+            17/01/24 às 12:09
+          </span>
+
+          <span class="recipe-author-item">
+            <a href="/recipes/category/almoco">
+              <i class="fas fa-layer-group"></i>
+              <span>Almoço</span>
+            </a>
+          </span>
+
+        </div>
+
+        <div class="recipe-content">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est nisi voluptates ratione soluta voluptatum! Rerum, officia esse voluptatibus dolore deleniti totam nihil quibusdam repellat exercitationem neque hic soluta suscipit incidunt.
+        </p>
+        </div>
+
       </div>
     </div>
   </main>
