--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -21,6 +21,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik+Doodle+Shadow&display=swap" rel="stylesheet">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@800&display=swap" rel="stylesheet">
+
+
   <title>Recipes</title>
   <style>
     :root {
@@ -83,6 +88,7 @@
       font-size: 1.6rem;
       font-family: var(--font-primary);
       background: var(--color-gray-1);
+      color: var(--color-dark-text);
     }
 
     h1,
@@ -91,7 +97,7 @@
     h4,
     h5,
     h6 {
-      font-family: var(--font-headings);
+      font-family: var(--font-headings)
     }
 
     .container {
@@ -181,7 +187,9 @@
 
     .recipe{
       background: var(--color-white);
-      
+      box-shadow: -5px 5px 10px rgba(0, 0, 0, .2);
+      transition: all 300ms ease-in-out;
+      transform: scale(1);
     }
 
     .recipe img{
@@ -191,6 +199,44 @@
     .recipe-list-item{
       max-width: 64rem;
     }
+
+    .recipe-list-item:hover{
+      transform: scale(1.02);
+      box-shadow: -8px 8px 18px rgba(0, 0, 0, .25);
+    }
+
+    .recipe-title-container{
+      padding: var(--spacing-gutter-medium);
+      padding-top: 2rem;
+    }
+
+    .recipe-author{
+      padding: 0 var(--spacing-gutter-medium);
+    }
+
+    .recipe-author-item{
+      color: var(--color-gray-4);
+      margin-right: 1rem;
+    }
+
+    .recipe-author a{
+      color: var(--color-primary);
+      transition: all 300ms ease-in-out;
+      text-decoration: none;
+    }
+
+    .recipe-author a:hover{
+      color: var(--color-primary-dark);
+    }
+
+    .recipe-content{
+      padding: var(--spacing-gutter-medium);
+      padding-top: 2rem;
+
+    }
+
+    
+
 
   </style>
 </head>
