--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -190,6 +190,8 @@
       box-shadow: -5px 5px 10px rgba(0, 0, 0, .2);
       transition: all 300ms ease-in-out;
       transform: scale(1);
+      border-radius: .8rem;
+      overflow: hidden;
     }
 
     .recipe img{
@@ -232,9 +234,41 @@
     .recipe-content{
       padding: var(--spacing-gutter-medium);
       padding-top: 2rem;
-
     }
 
+    .recipe-meta-container{
+      display: flex; /*Deixar de lado*/
+      flex-flow: row wrap; /* Cair pro lado */
+      padding: var(--spacing-gutter-medium);
+      background: var(--color-gray-1);
+    }
+
+    .recipe-meta{
+      display: flex;
+      flex-flow: column nowrap;
+      flex-shrink: 1;
+      flex-grow: 1;
+      text-align: center;
+    }
+
+    .recipe-meta-title{
+      font-size: 1.6rem;
+    }
+
+    .recipe-footer a{
+      background: var(--color-primary-dark);
+      display: block;
+      flex-flow: row nowrap;
+      color: var(--color-white);
+      text-decoration: none;
+      text-align: center;
+      padding: 1.5rem var(--spacing-gutter-medium);
+      transition: all 300ms ease-in-out;
+    }
+    
+    .recipe-footer a:hover{
+      filter: brightness(2);
+    }
     
 
 
